  If you're looking at migrating from upstream Spring 105.0, there is a guide at https://beyond-all-reason.github.io/spring/migrating-from-spring/

  ^

















Spring changelog
(since 85.0 a "!" prefix indicates backward compatibility broke)
(numbers in brackets normally mean the mantis ticket ID)

-- BAR105 NEXT ---------------------------------------------------

(since release 1544)

Lua:
 - add `Game.footprintScale`, the footprint multiplier compared to defs
 - add `Game.buildSquareSize`, the building alignment grid size
 - removed `Game.allowTeamColors` (was deprecated and always `true`)
 - `Spring.SetActiveCommand()` or passing explicit `nil` now cancels the command.
   The previous method to pass `-1` still works.
 - add `Spring.GetUnitSeismicSignature(unitID) -> number seismicSignature`
 - add `Spring.SetUnitSeismicSignature(unitID, seismicSignature) -> nil`
 - add `Spring.GetUnitWorkerTask(unitID) -> cmdID, targetID`. Returns a worker's current
   task, represented via commandID. Note that it differs from `Spring.GetUnitCurrentCommand`
   in that a unit may be working without having the relevant order in front of the queue,
   for example via Guard, or alternatively, it may not be working despite having it (for
   example it's not yet in range). It also resolves Repair vs Build commands.
 - allow shallow recursion in `Spring.TransferUnit`
 - add `Spring.SelectUnit(unitID, bool append = false) -> nil`, single-unit
   version of SelectUnit{Array,Map} that doesn't require a table
 - add `Spring.DeselectUnit(unitID) -> nil`, deselects a unit
 - add `Spring.SetUnitShieldRechargeDelay(unitID, [weaponNum], [seconds]) -> nil`. Resets a unit's
   shield regeneration delay. The weapon number is optional if the unit has a single shield. The
   timer value is also optional, if you leave it nil it will emulate a weapon hit. Note that a
   weapon hit (both via nil here, and "real" hits) will never decrease the remaining timer, though