@@ -312,6 +312,8 @@ bool LuaSyncedCtrl::PushEntries(lua_State* L)
 	REGISTER_LUA_CFUNC(SetOriginalHeightMap);
 	REGISTER_LUA_CFUNC(SetOriginalHeightMapFunc);
 
+	REGISTER_LUA_CFUNC(RebuildSmoothMesh);
+
 	REGISTER_LUA_CFUNC(LevelSmoothMesh);
 	REGISTER_LUA_CFUNC(AdjustSmoothMesh);
 	REGISTER_LUA_CFUNC(RevertSmoothMesh);
@@ -6072,6 +6074,21 @@ static inline void ParseSmoothMeshParams(lua_State* L, const char* caller,
 			smoothGround.GetMaxX() - 1,
 			smoothGround.GetMaxY() - 1);
 
+}
+
+
+/***
+ * @function Spring.RebuildSmoothMesh
+ *
+ * Heightmap changes normally take up to 25s to propagate to the smooth mesh.
+ * Use to force a mapwide update immediately.
+ *
+ * @treturn nil
+ */
+int LuaSyncedCtrl::RebuildSmoothMesh(lua_State* L)
+{
+	smoothGround.MakeSmoothMesh();
+	return 0;
 }
 
 
